[package]
name = "malloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ksync = { path = "../ksync" }
corelib = { path = "../corelib", features = ["core_impl"] }
shared_heap = { path = "../shared_heap" }
buddy_system_allocator = "0.9.0"